--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,13 @@
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
 			<version>3.3.1</version>
-			<scope>provide</scope>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.14</version>
-			<scope>provide</scope>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
