--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,11 @@
 	<groupId>cn.howso</groupId>
 	<artifactId>mybatis-mapper</artifactId>
 	<version>0.0.4-SNAPSHOT</version>
+	<properties>
+		<spring-version>4.2.5.RELEASE</spring-version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jackson>2.6.5</jackson>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -27,6 +32,30 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.14</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis-spring</artifactId>
+			<version>1.3.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>${spring-version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring-version}</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${spring-version}</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
